--- a/public/css/app.css
+++ b/public/css/app.css
@@ -727,6 +727,21 @@ select {
 .bottom-0 {
   bottom: 0px;
 }
+.top-\[-60px\] {
+  top: -60px;
+}
+.left-\[-60px\] {
+  left: -60px;
+}
+.right-2 {
+  right: 0.5rem;
+}
+.right-10 {
+  right: 2.5rem;
+}
+.top-5 {
+  top: 1.25rem;
+}
 .z-0 {
   z-index: 0;
 }
@@ -736,9 +751,16 @@ select {
 .m-0 {
   margin: 0px;
 }
+.m-2 {
+  margin: 0.5rem;
+}
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
+}
+.my-2 {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
 }
 .ml-3 {
   margin-left: 0.75rem;
@@ -773,14 +795,20 @@ select {
 .-mt-px {
   margin-top: -1px;
 }
+.-mr-2 {
+  margin-right: -0.5rem;
+}
+.mt-3 {
+  margin-top: 0.75rem;
+}
 .mb-4 {
   margin-bottom: 1rem;
 }
 .mt-1 {
   margin-top: 0.25rem;
 }
-.mt-\[10vh\] {
-  margin-top: 10vh;
+.mt-\[6vh\] {
+  margin-top: 6vh;
 }
 .mt-\[17vh\] {
   margin-top: 17vh;
@@ -791,14 +819,29 @@ select {
 .mb-3 {
   margin-bottom: 0.75rem;
 }
-.mt-3 {
-  margin-top: 0.75rem;
+.mt-\[12vh\] {
+  margin-top: 12vh;
 }
 .mt-6 {
   margin-top: 1.5rem;
 }
-.-mr-2 {
-  margin-right: -0.5rem;
+.mt-\[5vh\] {
+  margin-top: 5vh;
+}
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+.mt-\[4vh\] {
+  margin-top: 4vh;
+}
+.mt-\[7vh\] {
+  margin-top: 7vh;
+}
+.mt-\[5\] {
+  margin-top: 5;
+}
+.mt-\[10vh\] {
+  margin-top: 10vh;
 }
 .block {
   display: block;
@@ -811,6 +854,9 @@ select {
 }
 .inline-flex {
   display: inline-flex;
+}
+.table {
+  display: table;
 }
 .flow-root {
   display: flow-root;
@@ -830,6 +876,12 @@ select {
 .h-16 {
   height: 4rem;
 }
+.h-10 {
+  height: 2.5rem;
+}
+.h-6 {
+  height: 1.5rem;
+}
 .h-20 {
   height: 5rem;
 }
@@ -839,17 +891,11 @@ select {
 .h-\[300px\] {
   height: 300px;
 }
-.h-10 {
-  height: 2.5rem;
-}
 .h-\[150px\] {
   height: 150px;
 }
 .h-4 {
   height: 1rem;
-}
-.h-6 {
-  height: 1.5rem;
 }
 .min-h-screen {
   min-height: 100vh;
@@ -862,6 +908,9 @@ select {
 }
 .w-auto {
   width: auto;
+}
+.w-6 {
+  width: 1.5rem;
 }
 .w-20 {
   width: 5rem;
@@ -878,6 +927,9 @@ select {
 .w-\[600px\] {
   width: 600px;
 }
+.w-\[500px\] {
+  width: 500px;
+}
 .w-\[700px\] {
   width: 700px;
 }
@@ -893,23 +945,31 @@ select {
 .w-48 {
   width: 12rem;
 }
+.w-\[180px\] {
+  width: 180px;
+}
 .w-4 {
   width: 1rem;
 }
-.w-6 {
-  width: 1.5rem;
+.w-fit {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+.w-\[400px\] {
+  width: 400px;
 }
 .min-w-0 {
   min-width: 0px;
+}
+.max-w-7xl {
+  max-width: 80rem;
 }
 .max-w-xl {
   max-width: 36rem;
 }
 .max-w-6xl {
   max-width: 72rem;
-}
-.max-w-7xl {
-  max-width: 80rem;
 }
 .max-w-md {
   max-width: 28rem;
@@ -965,6 +1025,9 @@ select {
 .flex-col {
   flex-direction: column;
 }
+.items-end {
+  align-items: flex-end;
+}
 .items-center {
   align-items: center;
 }
@@ -989,16 +1052,6 @@ select {
 .gap-3 {
   gap: 0.75rem;
 }
-.space-x-4 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(1rem * var(--tw-space-x-reverse));
-  margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
-}
-.space-x-2 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(0.5rem * var(--tw-space-x-reverse));
-  margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
-}
 .space-x-8 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(2rem * var(--tw-space-x-reverse));
@@ -1008,6 +1061,16 @@ select {
   --tw-space-y-reverse: 0;
   margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
+}
+.space-x-4 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(1rem * var(--tw-space-x-reverse));
+  margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
+}
+.space-x-2 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0.5rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
 }
 .overflow-auto {
   overflow: auto;
@@ -1042,6 +1105,9 @@ select {
 }
 .border {
   border-width: 1px;
+}
+.border-2 {
+  border-width: 2px;
 }
 .border-b-2 {
   border-bottom-width: 2px;
@@ -1084,17 +1150,21 @@ select {
   --tw-border-opacity: 1;
   border-color: rgb(243 244 246 / var(--tw-border-opacity));
 }
+.border-red-300 {
+  --tw-border-opacity: 1;
+  border-color: rgb(252 165 165 / var(--tw-border-opacity));
+}
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
-.bg-indigo-50 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(238 242 255 / var(--tw-bg-opacity));
-}
 .bg-gray-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}
+.bg-indigo-50 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(238 242 255 / var(--tw-bg-opacity));
 }
 .bg-gray-800 {
   --tw-bg-opacity: 1;
@@ -1116,6 +1186,10 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(220 38 38 / var(--tw-bg-opacity));
 }
+.bg-gray-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
+}
 .bg-clip-padding {
   background-clip: padding-box;
 }
@@ -1128,14 +1202,17 @@ select {
 .p-6 {
   padding: 1.5rem;
 }
+.p-2 {
+  padding: 0.5rem;
+}
 .p-3 {
   padding: 0.75rem;
 }
 .p-4 {
   padding: 1rem;
 }
-.p-2 {
-  padding: 0.5rem;
+.p-8 {
+  padding: 2rem;
 }
 .px-4 {
   padding-left: 1rem;
@@ -1148,6 +1225,10 @@ select {
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
+}
+.py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
 }
 .px-1 {
   padding-left: 0.25rem;
@@ -1181,9 +1262,9 @@ select {
   padding-top: 0.625rem;
   padding-bottom: 0.625rem;
 }
-.py-6 {
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
 }
 .pt-1 {
   padding-top: 0.25rem;
@@ -1197,9 +1278,6 @@ select {
 .pt-8 {
   padding-top: 2rem;
 }
-.pt-6 {
-  padding-top: 1.5rem;
-}
 .pt-2 {
   padding-top: 0.5rem;
 }
@@ -1211,6 +1289,30 @@ select {
 }
 .pb-1 {
   padding-bottom: 0.25rem;
+}
+.pt-6 {
+  padding-top: 1.5rem;
+}
+.pt-\[10\] {
+  padding-top: 10;
+}
+.pt-\[\] {
+  padding-top: ;
+}
+.pt-\[6\] {
+  padding-top: 6;
+}
+.pt-\[6vh\] {
+  padding-top: 6vh;
+}
+.pt-\[12vh\] {
+  padding-top: 12vh;
+}
+.pt-\[14vh\] {
+  padding-top: 14vh;
+}
+.pt-\[10vh\] {
+  padding-top: 10vh;
 }
 .text-center {
   text-align: center;
@@ -1249,6 +1351,9 @@ select {
 }
 .font-bold {
   font-weight: 700;
+}
+.font-\[500\] {
+  font-weight: 500;
 }
 .uppercase {
   text-transform: uppercase;
@@ -1337,6 +1442,10 @@ select {
 .text-red-600 {
   --tw-text-opacity: 1;
   color: rgb(220 38 38 / var(--tw-text-opacity));
+}
+.text-blue-100 {
+  --tw-text-opacity: 1;
+  color: rgb(219 234 254 / var(--tw-text-opacity));
 }
 .underline {
   -webkit-text-decoration-line: underline;
@@ -1534,6 +1643,10 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
 }
+.focus\:bg-gray-100:focus {
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}
 .focus\:bg-white:focus {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -1545,10 +1658,6 @@ select {
 .focus\:bg-red-700:focus {
   --tw-bg-opacity: 1;
   background-color: rgb(185 28 28 / var(--tw-bg-opacity));
-}
-.focus\:bg-gray-100:focus {
-  --tw-bg-opacity: 1;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
 .focus\:text-gray-700:focus {
   --tw-text-opacity: 1;
@@ -1663,12 +1772,12 @@ select {
     margin-bottom: -1px;
   }
 
-  .sm\:ml-0 {
-    margin-left: 0px;
-  }
-
   .sm\:ml-10 {
     margin-left: 2.5rem;
+  }
+
+  .sm\:ml-0 {
+    margin-left: 0px;
   }
 
   .sm\:ml-6 {
@@ -1747,6 +1856,10 @@ select {
 }
 @media (min-width: 768px) {
 
+  .md\:w-4\/5 {
+    width: 80%;
+  }
+
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
@@ -1761,9 +1874,19 @@ select {
 }
 @media (min-width: 1024px) {
 
+  .lg\:mt-0 {
+    margin-top: 0px;
+  }
+
   .lg\:px-8 {
     padding-left: 2rem;
     padding-right: 2rem;
+  }
+}
+@media (min-width: 1280px) {
+
+  .xl\:w-3\/5 {
+    width: 60%;
   }
 }
 
