--- a/public/css/app.css
+++ b/public/css/app.css
@@ -706,6 +706,17 @@ select {
     max-width: 1536px;
   }
 }
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width: 0;
+}
 .fixed {
   position: fixed;
 }
@@ -732,15 +743,6 @@ select {
 }
 .left-\[-60px\] {
   left: -60px;
-}
-.right-2 {
-  right: 0.5rem;
-}
-.right-10 {
-  right: 2.5rem;
-}
-.top-5 {
-  top: 1.25rem;
 }
 .z-0 {
   z-index: 0;
@@ -819,6 +821,9 @@ select {
 .mb-3 {
   margin-bottom: 0.75rem;
 }
+.mt-\[20vh\] {
+  margin-top: 20vh;
+}
 .mt-\[12vh\] {
   margin-top: 12vh;
 }
@@ -837,11 +842,35 @@ select {
 .mt-\[7vh\] {
   margin-top: 7vh;
 }
-.mt-\[5\] {
-  margin-top: 5;
+.mb-5 {
+  margin-bottom: 1.25rem;
+}
+.mb-10 {
+  margin-bottom: 2.5rem;
+}
+.mt-\[\] {
+  margin-top: ;
+}
+.mt-\[15\] {
+  margin-top: 15;
+}
+.mt-\[15vh\] {
+  margin-top: 15vh;
 }
 .mt-\[10vh\] {
   margin-top: 10vh;
+}
+.mt-\[14vh\] {
+  margin-top: 14vh;
+}
+.mt-\[16vh\] {
+  margin-top: 16vh;
+}
+.mt-\[5\] {
+  margin-top: 5;
+}
+.mr-4 {
+  margin-right: 1rem;
 }
 .block {
   display: block;
@@ -927,11 +956,16 @@ select {
 .w-\[600px\] {
   width: 600px;
 }
-.w-\[500px\] {
-  width: 500px;
-}
 .w-\[700px\] {
   width: 700px;
+}
+.w-fit {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+.w-\[180px\] {
+  width: 180px;
 }
 .w-10 {
   width: 2.5rem;
@@ -945,19 +979,38 @@ select {
 .w-48 {
   width: 12rem;
 }
-.w-\[180px\] {
-  width: 180px;
+.w-\[400px\] {
+  width: 400px;
 }
 .w-4 {
   width: 1rem;
 }
-.w-fit {
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
+.w-\[500px\] {
+  width: 500px;
 }
-.w-\[400px\] {
-  width: 400px;
+.w-\[200px\] {
+  width: 200px;
+}
+.w-\[\] {
+  width: ;
+}
+.w-\[50\%\] {
+  width: 50%;
+}
+.w-\[40\%\] {
+  width: 40%;
+}
+.w-\[45\%\] {
+  width: 45%;
+}
+.w-\[33\%\] {
+  width: 33%;
+}
+.w-\[33\] {
+  width: 33;
+}
+.w-\[500x\] {
+  width: 500x;
 }
 .min-w-0 {
   min-width: 0px;
@@ -1025,9 +1078,6 @@ select {
 .flex-col {
   flex-direction: column;
 }
-.items-end {
-  align-items: flex-end;
-}
 .items-center {
   align-items: center;
 }
@@ -1051,6 +1101,24 @@ select {
 }
 .gap-3 {
   gap: 0.75rem;
+}
+.gap-5 {
+  gap: 1.25rem;
+}
+.gap-6 {
+  gap: 1.5rem;
+}
+.gap-10 {
+  gap: 2.5rem;
+}
+.gap-1 {
+  gap: 0.25rem;
+}
+.gap-14 {
+  gap: 3.5rem;
+}
+.gap-4 {
+  gap: 1rem;
 }
 .space-x-8 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
@@ -1078,9 +1146,15 @@ select {
 .overflow-hidden {
   overflow: hidden;
 }
+.overflow-x-auto {
+  overflow-x: auto;
+}
 .truncate {
   overflow: hidden;
   text-overflow: ellipsis;
+  white-space: nowrap;
+}
+.whitespace-nowrap {
   white-space: nowrap;
 }
 .rounded-md {
@@ -1150,9 +1224,13 @@ select {
   --tw-border-opacity: 1;
   border-color: rgb(243 244 246 / var(--tw-border-opacity));
 }
-.border-red-300 {
+.border-red-200 {
   --tw-border-opacity: 1;
-  border-color: rgb(252 165 165 / var(--tw-border-opacity));
+  border-color: rgb(254 202 202 / var(--tw-border-opacity));
+}
+.border-red-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(248 113 113 / var(--tw-border-opacity));
 }
 .bg-white {
   --tw-bg-opacity: 1;
@@ -1186,9 +1264,13 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(220 38 38 / var(--tw-bg-opacity));
 }
-.bg-gray-200 {
+.bg-blue-700 {
   --tw-bg-opacity: 1;
-  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
+  background-color: rgb(29 78 216 / var(--tw-bg-opacity));
+}
+.bg-gray-50 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
 }
 .bg-clip-padding {
   background-clip: padding-box;
@@ -1266,6 +1348,10 @@ select {
   padding-left: 1.25rem;
   padding-right: 1.25rem;
 }
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
 .pt-1 {
   padding-top: 0.25rem;
 }
@@ -1290,32 +1376,26 @@ select {
 .pb-1 {
   padding-bottom: 0.25rem;
 }
+.pt-12 {
+  padding-top: 3rem;
+}
 .pt-6 {
   padding-top: 1.5rem;
-}
-.pt-\[10\] {
-  padding-top: 10;
-}
-.pt-\[\] {
-  padding-top: ;
-}
-.pt-\[6\] {
-  padding-top: 6;
-}
-.pt-\[6vh\] {
-  padding-top: 6vh;
-}
-.pt-\[12vh\] {
-  padding-top: 12vh;
-}
-.pt-\[14vh\] {
-  padding-top: 14vh;
 }
 .pt-\[10vh\] {
   padding-top: 10vh;
 }
+.pt-\[\] {
+  padding-top: ;
+}
+.text-left {
+  text-align: left;
+}
 .text-center {
   text-align: center;
+}
+.text-right {
+  text-align: right;
 }
 .font-sans {
   font-family: Nunito, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
@@ -1340,6 +1420,9 @@ select {
   font-size: 0.75rem;
   line-height: 1rem;
 }
+.text-\[20px\] {
+  font-size: 20px;
+}
 .font-medium {
   font-weight: 500;
 }
@@ -1354,6 +1437,9 @@ select {
 }
 .font-\[500\] {
   font-weight: 500;
+}
+.font-\[700\] {
+  font-weight: 700;
 }
 .uppercase {
   text-transform: uppercase;
@@ -1446,6 +1532,18 @@ select {
 .text-blue-100 {
   --tw-text-opacity: 1;
   color: rgb(219 234 254 / var(--tw-text-opacity));
+}
+.text-blue-400 {
+  --tw-text-opacity: 1;
+  color: rgb(96 165 250 / var(--tw-text-opacity));
+}
+.text-blue-600 {
+  --tw-text-opacity: 1;
+  color: rgb(37 99 235 / var(--tw-text-opacity));
+}
+.text-blue-300 {
+  --tw-text-opacity: 1;
+  color: rgb(147 197 253 / var(--tw-text-opacity));
 }
 .underline {
   -webkit-text-decoration-line: underline;
@@ -1570,6 +1668,10 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(185 28 28 / var(--tw-bg-opacity));
 }
+.hover\:bg-blue-800:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(30 64 175 / var(--tw-bg-opacity));
+}
 .hover\:text-gray-500:hover {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
@@ -1593,6 +1695,14 @@ select {
 .hover\:text-blue-600:hover {
   --tw-text-opacity: 1;
   color: rgb(37 99 235 / var(--tw-text-opacity));
+}
+.hover\:text-blue-700:hover {
+  --tw-text-opacity: 1;
+  color: rgb(29 78 216 / var(--tw-text-opacity));
+}
+.hover\:underline:hover {
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
 }
 .hover\:shadow-lg:hover {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
@@ -1694,9 +1804,18 @@ select {
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
+.focus\:ring-4:focus {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
 .focus\:ring-indigo-200:focus {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(199 210 254 / var(--tw-ring-opacity));
+}
+.focus\:ring-blue-300:focus {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(147 197 253 / var(--tw-ring-opacity));
 }
 .focus\:ring-opacity-50:focus {
   --tw-ring-opacity: 0.5;
@@ -1750,6 +1869,16 @@ select {
     background-color: rgb(31 41 55 / var(--tw-bg-opacity));
   }
 
+  .dark\:bg-blue-600 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(37 99 235 / var(--tw-bg-opacity));
+  }
+
+  .dark\:bg-gray-700 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(55 65 81 / var(--tw-bg-opacity));
+  }
+
   .dark\:text-white {
     --tw-text-opacity: 1;
     color: rgb(255 255 255 / var(--tw-text-opacity));
@@ -1763,6 +1892,21 @@ select {
   .dark\:text-gray-500 {
     --tw-text-opacity: 1;
     color: rgb(107 114 128 / var(--tw-text-opacity));
+  }
+
+  .dark\:text-blue-500 {
+    --tw-text-opacity: 1;
+    color: rgb(59 130 246 / var(--tw-text-opacity));
+  }
+
+  .dark\:hover\:bg-blue-700:hover {
+    --tw-bg-opacity: 1;
+    background-color: rgb(29 78 216 / var(--tw-bg-opacity));
+  }
+
+  .dark\:focus\:ring-blue-800:focus {
+    --tw-ring-opacity: 1;
+    --tw-ring-color: rgb(30 64 175 / var(--tw-ring-opacity));
   }
 }
 @media (min-width: 640px) {
@@ -1884,6 +2028,10 @@ select {
   }
 }
 @media (min-width: 1280px) {
+
+  .xl\:w-96 {
+    width: 24rem;
+  }
 
   .xl\:w-3\/5 {
     width: 60%;
